--- a/MeetingApp/Base.lproj/Main.storyboard
+++ b/MeetingApp/Base.lproj/Main.storyboard
@@ -57,6 +57,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="Skp-UH-q9p"/>
+                        <barButtonItem systemItem="edit" id="xs0-Pm-Y7n"/>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" id="liG-JS-3mS">
                         <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="cew-ja-Z15">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -583,6 +587,11 @@
                             <outlet property="delegate" destination="Ot9-mV-rbQ" id="obZ-eg-bCv"/>
                         </connections>
                     </tableView>
+                    <toolbarItems>
+                        <barButtonItem systemItem="trash" id="bwD-sF-PFK"/>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="Eaj-fP-LZB"/>
+                        <barButtonItem systemItem="action" id="VFc-61-Ydg"/>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" id="NVb-BN-2W4">
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="jxi-P0-XUZ">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -597,7 +606,7 @@
         <!--Navigation Controller-->
         <scene sceneID="U1c-qm-2em">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3ui-UR-gmk" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="3ui-UR-gmk" sceneMemberID="viewController">
                     <toolbarItems/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="T6h-LL-Mkz">
@@ -606,6 +615,10 @@
                         <color key="barTintColor" red="0.090196078430000007" green="0.20392156859999999" blue="0.50980392159999999" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="XD3-NA-RqR">
+                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="2QN-cd-kZ6" kind="relationship" relationship="rootViewController" id="UqE-mk-StN"/>
                     </connections>
