--- a/MeetingApp/Base.lproj/Main.storyboard
+++ b/MeetingApp/Base.lproj/Main.storyboard
@@ -57,10 +57,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="Skp-UH-q9p"/>
-                        <barButtonItem systemItem="edit" id="xs0-Pm-Y7n"/>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" id="liG-JS-3mS">
                         <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="cew-ja-Z15">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -588,7 +585,11 @@
                         </connections>
                     </tableView>
                     <toolbarItems>
-                        <barButtonItem systemItem="trash" id="bwD-sF-PFK"/>
+                        <barButtonItem systemItem="trash" id="bwD-sF-PFK">
+                            <connections>
+                                <action selector="trashPressed:" destination="Ot9-mV-rbQ" id="p3r-XI-LU5"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="Eaj-fP-LZB"/>
                         <barButtonItem systemItem="action" id="VFc-61-Ydg">
                             <connections>
