--- a/MeetingApp/Base.lproj/Main.storyboard
+++ b/MeetingApp/Base.lproj/Main.storyboard
@@ -600,6 +600,9 @@
                     <navigationItem key="navigationItem" id="NVb-BN-2W4">
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="jxi-P0-XUZ">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="doneMeetingPressed:" destination="Ot9-mV-rbQ" id="R0d-5b-mGd"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
